src/bootstrap/src/core/builder/cli_paths/snapshots/x_test_debuginfo.snap
---
source: src/bootstrap/src/core/builder/cli_paths/tests.rs
expression: test debuginfo
---
[Test] test::Debuginfo
    targets: [aarch64-unknown-linux-gnu]
    - Suite("tests/debuginfo")
