src/bootstrap/src/core/builder/cli_paths/snapshots/x_test_library.snap
---
source: src/bootstrap/src/core/builder/cli_paths/tests.rs
expression: test library
---
[Test] test::Crate
    targets: [aarch64-unknown-linux-gnu]
    - Set({library/alloc})
    - Set({library/alloctests})
    - Set({library/compiler-builtins/compiler-builtins})
    - Set({library/core})
    - Set({library/coretests})
    - Set({library/panic_abort})
    - Set({library/panic_unwind})
    - Set({library/proc_macro})
    - Set({library/rustc-std-workspace-core})
    - Set({library/std})
    - Set({library/std_detect})
    - Set({library/sysroot})
    - Set({library/test})
    - Set({library/unwind})
[Test] test::StdarchVerify
    targets: [x86_64-unknown-linux-gnu]
    - Set({library/stdarch/crates/stdarch-verify})
[Test] test::IntrinsicTest
    targets: [x86_64-unknown-linux-gnu]
    - Set({library/stdarch/crates/intrinsic-test})
