src/bootstrap/src/core/builder/cli_paths/snapshots/x_test_library_core_and_alloc_and_stdarch.snap
---
source: src/bootstrap/src/core/builder/cli_paths/tests.rs
expression: test library/core library/alloc library/stdarch
---
[Test] test::Crate
    targets: [aarch64-unknown-linux-gnu]
    - Set({library/core})
    - Set({library/alloc})
[Test] test::StdarchVerify
    targets: [x86_64-unknown-linux-gnu]
    - Set({library/stdarch/crates/stdarch-verify})
[Test] test::IntrinsicTest
    targets: [x86_64-unknown-linux-gnu]
    - Set({library/stdarch/crates/intrinsic-test})
