src/bootstrap/src/core/builder/cli_paths/snapshots/x_test_librustdoc.snap
---
source: src/bootstrap/src/core/builder/cli_paths/tests.rs
expression: test librustdoc
---
[Test] test::CrateRustdoc
    targets: [x86_64-unknown-linux-gnu]
    - Set({"src/librustdoc"})
