src/bootstrap/src/core/builder/cli_paths/snapshots/x_test_librustdoc_rustdoc.snap
---
source: src/bootstrap/src/core/builder/cli_paths/tests.rs
expression: test librustdoc rustdoc
---
[Test] test::CrateRustdoc
    targets: [x86_64-unknown-linux-gnu]
    - Set({"src/librustdoc", "src/tools/rustdoc"})
[Test] test::RustdocBook
    targets: [x86_64-unknown-linux-gnu]
    - Set({"src/doc/rustdoc"})
