src/bootstrap/src/core/builder/cli_paths/snapshots/x_test_librustdoc_rustdoc_html.snap
---
source: src/bootstrap/src/core/builder/cli_paths/tests.rs
expression: test librustdoc rustdoc-html
---
[Test] test::CrateRustdoc
    targets: [x86_64-unknown-linux-gnu]
    - Set({"src/librustdoc"})
[Test] test::RustdocHtml
    targets: [x86_64-unknown-linux-gnu]
    - Suite("tests/rustdoc-html")
