src/bootstrap/src/core/builder/cli_paths/snapshots/x_test_miri.snap
---
source: src/bootstrap/src/core/builder/cli_paths/tests.rs
expression: test miri
---
[Test] test::Miri
    targets: [aarch64-unknown-linux-gnu]
    - Set({src/tools/miri})
