src/bootstrap/src/core/builder/cli_paths/snapshots/x_test_rustdoc.snap
---
source: src/bootstrap/src/core/builder/cli_paths/tests.rs
expression: test rustdoc
---
[Test] test::CrateRustdoc
    targets: [x86_64-unknown-linux-gnu]
    - Set({"src/tools/rustdoc"})
[Test] test::RustdocBook
    targets: [x86_64-unknown-linux-gnu]
    - Set({"src/doc/rustdoc"})
