src/bootstrap/src/core/builder/cli_paths/snapshots/x_test_rustdoc_skip_rustdoc.snap
---
source: src/bootstrap/src/core/builder/cli_paths/tests.rs
expression: test rustdoc --skip=rustdoc
---

