src/bootstrap/src/core/builder/cli_paths/snapshots/x_test_semver_check.snap
---
source: src/bootstrap/src/core/builder/cli_paths/tests.rs
expression: test std-semver-check
---
[Test] test::StdSemverCheck
    targets: [aarch64-unknown-linux-gnu]
    - Set({"std-semver-check"})
